Completed user registration form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,10 @@
 <%- include("partials/header.ejs") %>
 
 <!-- Content -->
-<p>Welcome to <%= title %></p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<header>
+    <h1>Welcome to <%= title %></h1>
+    <a href="users/register">Click here to register</a>
+</header>
 
 
 <%- include("partials/footer.ejs") %>
