--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,8 @@
+</div> <!-- end main-content-->
 
-<p>&copy; 2021</p>
+<footer>
+    <p>&copy; 2021</p>
+</footer><!-- end footer-->
 
 </body>
 </html>
