--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
     <link rel="stylesheet" href="/styles/styles.css" type="text/css">
-    <script src="/js/ui.js"></script>
+    <script src="/js/ui.js" defer></script>
 </head>
 <body>
+    <div id="main-content">
