--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 </div> <!-- end main-content-->
 
 <footer>
-    <p>&copy; 2021</p>
+    <h3>Mondal &copy; 2021</h3>
 </footer><!-- end footer-->
 
 </body>
