--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
     <link rel="stylesheet" href="/styles/styles.css" type="text/css">
-    <script src="/js/ui.js" defer></script>
+    <script src="/js/event-handlers.js" defer></script>
 </head>
 <body>
+
+    <header>
+        <h1><%= title %></h1>
+    </header><!--end header-->
+
     <div id="main-content">
