--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,11 @@
-</div> <!-- end main-content-->
+    </div> <!-- end main-content--> 
 
-<footer>
-    <h3>Mondal &copy; 2021</h3>
-</footer><!-- end footer-->
+    <footer>
+        <div id="main-footer-content">
+
+        </div>   
+        <h3>Mondal &copy; 2021</h3>
+    </footer><!-- end footer-->
 
 </body>
 </html>
