--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,16 @@
 </head>
 <body>
 
-    <header>
-        <h1><%= title %></h1>
-    </header><!--end header-->
+    <nav id="navbar">
+        <ul>
+            <li class="navbar-item"><a href="/">Home</a></li>
+            <li class="navbar-item"><a href="/users/register">Register</a></li>
+            <li class="navbar-item"><a href="/about">About</a></li>
+            <li class="navbar-item"><a href="/contact">Contact Us</a></li>
+        </ul>
+    </nav><!--end navbar-->
 
     <div id="main-content">
+        <header>
+            <h1><%= title %></h1>
+        </header><!--end header-->
