Added Genre and Scholar Models; Complete Create,Read operations for Scholar resource; added dotenv for managing environment variables

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,25 @@
 <%- include("partials/header.ejs") %>
 
 <!-- Content -->
+<section id="showcase">
+<div class="container">
+    <h1>New Arrivals: </h1>
 
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est accusamus laborum nulla fuga culpa id cum porro neque 
+</div>
+</section>
+
+
+<section id="main-content">
+    <h1>Main Content: </h1>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque commodi suscipit quam ipsa blanditiis quo laudantium et iure officia reprehenderit. Eum facilis deleniti vel corporis nam tenetur dolor velit amet?
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam vitae fuga nobis cupiditate aperiam! Soluta consequuntur eligendi similique optio neque. Itaque temporibus harum optio possimus quidem enim repellat maxime quo!
+</section>
+
+
+<aside id="news">
+    <h1>News: </h1>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis sapiente error voluptatibus suscipit repellendus, ab ea sequi quo asperiores esse nostrum perspiciatis nam facere doloremque voluptates eos quas, natus provident.
+</aside>
 
 <%- include("partials/footer.ejs") %>
