--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
         <div id="main-footer-content">
 
         </div>   
-        <h3>Mondal &copy; 2021</h3>
+        <h3>Copyright &copy; 2021 Scholar's Website</h3>
     </footer><!-- end footer-->
 
 </body>
