--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;padding: 0;
+}
+
 body{
     text-align: center;
     padding: 0;
@@ -5,7 +9,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#main-content{
+#container{
     position: relative;
     min-height: 100vh;
     background: no-repeat url("../assets/images/library-main.jpg");
@@ -75,6 +79,7 @@ header h1 {
 
 #user-registration-form #genres-preferred {
     list-style: none;
+    margin: 0.5rem 2rem;
 }
 
 #user-registration-form #genres-preferred li {
@@ -118,6 +123,56 @@ header h1 {
 }
 
 
+#showcase, #main-content,#news{
+    color: white;
+    background-color: rgba(0,0,0,0.7);
+    margin-bottom: 0.5rem;
+}
+
+#showcase {
+    font-size: 1.5rem;
+}
+
+#main-content {
+    line-height: 1.5rem;
+}
+
+#showcase h1, #main-content h1, #news h1  {
+    margin-bottom: 0.5rem;
+}
+
+#main-content{
+    text-align: left;
+    float: left;
+    width: 65%;
+    padding: 0.5rem 2.5rem;
+    margin-right: 0.1rem;
+    box-sizing: border-box;
+}
+
+#news{
+    float: right;
+    width: 30%;
+    padding: 0.5rem 1.5rem;
+    margin-left: 0.1rem;
+    box-sizing: border-box;
+}
+
+
+/* Media Query*/
+@media(max-width: 600px) {
+    #main-content {
+        width: 100%;
+        float:none;
+    }
+
+    #news {
+        width: 100%;
+        float:none;
+    }
+
+}
+
 footer {
     clear: both;
     background-color: black;
@@ -126,6 +181,7 @@ footer {
     bottom: 0;
     width: 100%;
     height: 3rem;
+    box-sizing: border-box;
 }
 
 #main-footer-content {
@@ -133,3 +189,5 @@ footer {
     padding-top: 0.1rem;
     margin:auto;
 }
+
+
