--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
         <img src="/assets/images/edit-icon.png"/>
     </span>
 
-    <form action="/users" method="post">
+    <form action="/scholars" method="post">
         <label for="first-name">First Name:</label>
         <input type="text" id="first-name" name="first-name" placeholder="John" required autofocus>
 
@@ -26,8 +26,8 @@
             
                 <% genresAvailable.forEach(genre => { %>
                     <li>
-                        <input type="checkbox" name=<%=genre%> id=<%=genre%>>
-                        <label for=<%=genre%>><%=genre%></label><br/>
+                        <input type="checkbox" name=<%=genre.name%> id=<%=genre.name%>>
+                        <label for=<%=genre.name%>><%=genre.name%></label><br/>
                     </li>
                 <% }); %>
         </ul>
